--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 <div class="sent-message">Sua mensagem foi enviada, Obrigado!</div>
               </div>
               <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
+              <input type="hidden" name="_captcha" value="false">
             </form>
 
           </div>
